# MiniGit

./: .gitignore  CMakeLists.txt  MiniGit.db  README.md  main.cpp
.VSCodeCounter/2025-11-18_14-00-40/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.mgit/: config  index
.mgit/logs/: HEAD
config/: config.json  log4cplus.properties
database/include/: git_db.h
database/src/: CMakeLists.txt  git_db.cpp
database/src/sqlite/: CMakeLists.txt
database/tests/: CMakeLists.txt  check_tables  check_tables.cpp  test_database.cpp
docs/: Git存储实现详解.md  git对象模型.md  命令分发.md  对象存储.md  开发计划.md  数据库表.md
examples/: integration_test.cpp
include/: commit.h  config.h  diff_engine.h  file_system.h  index.h  object_db.h  remote.h  repository.h  thread_pool.h  utils.h
include/command_parser/: command.h  command_dispatcher.h  parser.h  types.h
include/command_parser/commands/: cmd_add.h  cmd_commit.h  cmd_config.h  cmd_init.h  cmd_push.h  cmd_status.h
scripts/: check_google_cpp.sh  standardize_code_formats.sh
src/: commit.cpp  config.cpp  diff_engine.cpp  file_system.cpp  index.cpp  main.cpp  object_db.cpp  remote.cpp  repository.cpp  thread_pool.cpp  utils.cpp
src/application/: cmd_executor.h  cmd_impl.h  command_bus.h  command_handler.h  commands.h  init_executor.cc  init_executor.h
src/application/init/: dependency_config.h  init_executor.cc  init_executor.h  init_service.cc  init_service.h
src/command_parser/: command_dispatcher.cpp  parser.cpp
src/command_parser/commands/: cmd_add.cpp  cmd_commit.cpp  cmd_config.cpp  cmd_init.cpp  cmd_push.cpp  cmd_status.cpp
src/domain/core/: blob.cc  blob.h  commit.cc  commit.h  hash_util.cc  hash_util.h  tree.cc  tree.h
src/domain/interfaces/: config_interface.h
src/domain/storage/: entities.h  file_system_engine.cc  file_system_engine.h  file_system_interface.h
src/domain/storage/repositories/: index_repository.cc  index_repository.h  object_repository.cc  object_repository.h  reference_repository.cc  reference_repository.h  repository_initializer.h
src/infrastructure/concurrency/: thread_pool_manager.cc  thread_pool_manager.h
src/infrastructure/config/: app_config.cc  app_config.h  config_impl.cc  config_impl.h  config_loader.cc  config_loader.h  config_reader.cc
src/infrastructure/database/: connection_pool.cc  connection_pool.h  database_manager.cc  database_manager.h  db_connection_guard.cc  db_connection_guard.h  mysql_connection_pool.cc  mysql_connection_pool.h  mysql_index_repository.cc  mysql_index_repository.h  mysql_object_repository.cc  mysql_object_repository.h  mysql_reference_repository.cc  mysql_reference_repository.h  mysql_repository_initializer.cc  mysql_repository_initializer.h
src/infrastructure/logging/: logger.cc  logger.h  logger_impl.cc  logger_impl.h
src/presentation/: command_engine.cc  command_engine.h  lexer.cc  lexer.h  model.h  scanner.cc  scanner.h  token.h  validator.h
src/presentation/validator/: init_validator.cc  init_validator.h  validator_impl.h
src/shared/: model.h  path_utils.h
tests/: commit_test.cpp  file_system_test.cpp  index_test.cpp  object_db_test.cpp  read_index.cpp  test_json  test_json.cpp  utils_test.cpp
tests/domain/core/: blob_test.cc  commit_test.cc  tree_test.cc
tests/domain/storage/: index_test.cc  object_test.cc  reference_test.cc
tests/infrastructure/concurrency/: thread_pool_manager_test.cc
tests/infrastructure/config/: config_loader_test.cc
tests/infrastructure/database/: database_test.cc
tests/infrastructure/logging/: logger_tests.cc
tests/presentation/: command_engine_test.cc  init_command_test.cc  lexer_test.cc  scanner_test.cc
